# KM-2026

hello_world/: partitions.csv
hello_world/main/: CMakeLists.txt  config_access_point.c  config_access_point.h  config_wifi.c  config_wifi.h  esp_now_comm.c  esp_now_comm.h  gpio_config.c  gpio_config.h  hello_world_main.c  index.html  main_app.c  master_slave_comm.h  spherical_parallel_manipulator.c  spherical_parallel_manipulator.h  stepper_motor.c  stepper_motor.h
hello_world/main/ESP_NOW/: esp_now_comm.c
hello_world/main/GPIO/: gpio_config.c  gpio_config.h
hello_world/main/Move_XY/: bresenham.c  bresenham.h  encoders.c  encoders.h  stepper_motor.c  stepper_motor.h  stepper_motor_old.c
hello_world/main/OTA/: over_the_air_updates.c  over_the_air_updates.h
hello_world/main/SPM/: spherical_parallel_manipulator.c  spherical_parallel_manipulator.h
